--- a/Projeto_veiculos_mongodb/templates/index.html
+++ b/Projeto_veiculos_mongodb/templates/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Índice do Aplicativo CRUD de Carros</title>
+    <title>Cadastro de Veículos</title>
+    <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container mt-5">
-        <h1>Índice do Aplicativo CRUD de Carros</h1>
-        <ul class="list-group">
-            <li class="list-group-item">
-                <a href="/create" class="btn btn-success">Cadastrar Carro</a>
-            </li>
-            <li class="list-group-item">
-                <a href="/read" class="btn btn-info">Buscar Carro</a>
-            </li>
-
-              <li class="list-group-item">
-                <a href="/search_by_id" class="btn btn-info">Buscar Carro</a>
-            </li>
-        </ul>
+<div class="container mt-5">
+    <div class="text-center">
+        <h1 class="display-4">Cadastro de veículos</h1>
     </div>
+    <ul class="list-group mt-4">
+        <li class="list-group-item">
+            <a href="/create" class="btn btn-success btn-lg btn-block">Cadastrar Carro</a>
+        </li>
+        <li class="list-group-item">
+            <a href="/read" class="btn btn-info btn-lg btn-block">Buscar Carro</a>
+        </li>
+    </ul>
+</div>
 </body>
 </html>
