função busca por id inserida

--- a/Projeto_veiculos_mongodb/templates/create.html
+++ b/Projeto_veiculos_mongodb/templates/create.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
+ <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
+        <a class="navbar-brand" href="/">Home</a>
+      <a class="navbar-brand" href="/read">Cadastrados</a>
+    </nav>
     <div class="container mt-5">
         <h1>Cadastrar Novo Carro</h1>
         <form action="/create" method="POST">
@@ -36,5 +40,7 @@
         </form>
         <a href="/read" class="btn btn-primary mt-3">Voltar para a Lista de Carros</a>
     </div>
+
+
 </body>
 </html>
