--- a/Projeto_veiculos_mongodb/templates/index.html
+++ b/Projeto_veiculos_mongodb/templates/index.html
@@ -15,8 +15,12 @@
             <a href="/create" class="btn btn-success btn-lg btn-block">Cadastrar Carro</a>
         </li>
         <li class="list-group-item">
-            <a href="/read" class="btn btn-info btn-lg btn-block">Buscar Carro</a>
+            <a href="/read" class="btn btn-info btn-lg btn-block">Exibir veículos cadastrados</a>
         </li>
+        <li class="list-group-item">
+            <a href="/search" class="btn btn-info btn-lg btn-block">Buscar veículo</a>
+        </li>
+
     </ul>
 </div>
 </body>
