--- a/Projeto_veiculos_mongodb/templates/read.html
+++ b/Projeto_veiculos_mongodb/templates/read.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
+           <a class="navbar-brand" href="/">Home</a>
+      <a class="navbar-brand" href="/read">Cadastrados</a>
+    </nav>
+
     <div class="container mt-5">
         <h1 class="mb-4">Lista de Carros</h1>
         <table class="table table-bordered">
