função busca por id inserida

--- a/Projeto_veiculos_mongodb/templates/search.html
+++ b/Projeto_veiculos_mongodb/templates/search.html
@@ -10,7 +10,7 @@
         <h1>Buscar Veículo por ID</h1>
         <form method="POST">
             <div class="form-group">
-                <label for="car_id">ID do Veículo:</label>
+                <label>ID do Veículo:</label>
                 <input type="text" name="car_id" class="form-control" required>
             </div>
             <button type="submit" class="btn btn-primary">Buscar</button>
