--- a/Projeto_veiculos_mongodb/templates/create.html
+++ b/Projeto_veiculos_mongodb/templates/create.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
- <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
-        <a class="navbar-brand" href="/">Home</a>
-      <a class="navbar-brand" href="/read">Cadastrados</a>
+ <nav class="navbar bg-primary border-bottom border-body justify-content-center">
+           <a class="navbar-brand text-light" href="/">HOME</a>
+      <a class="navbar-brand text-light"  href="/read">CADASTRADOS</a>
     </nav>
     <div class="container mt-5">
         <h1>Cadastrar Novo Carro</h1>
