--- a/Projeto_veiculos_mongodb/templates/edit.html
+++ b/Projeto_veiculos_mongodb/templates/edit.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
+ <nav class="navbar bg-primary border-bottom border-body justify-content-center">
+           <a class="navbar-brand text-light" href="/">HOME</a>
+      <a class="navbar-brand text-light"  href="/read">CADASTRADOS</a>
+    </nav>
     <div class="container mt-5">
         <h1>Editar Carro</h1>
         <form method="POST" action="{{ url_for('edit', id=carro._id) }}">
