--- a/Projeto_veiculos_mongodb/templates/index.html
+++ b/Projeto_veiculos_mongodb/templates/index.html
@@ -6,19 +6,24 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
+
+<nav class="navbar bg-primary border-bottom border-body justify-content-center">
+           <a class="navbar-brand text-light" href="/">HOME</a>
+      <a class="navbar-brand text-light"  href="/read">CADASTRADOS</a>
+    </nav>
 <div class="container mt-5">
     <div class="text-center">
         <h1 class="display-4">Cadastro de veículos</h1>
     </div>
     <ul class="list-group mt-4">
         <li class="list-group-item">
-            <a href="/create" class="btn btn-success btn-lg btn-block">Cadastrar Carro</a>
+            <a href="/create" class="btn btn-secondary btn-lg btn-block">Cadastrar Veículo</a>
         </li>
         <li class="list-group-item">
-            <a href="/read" class="btn btn-info btn-lg btn-block">Exibir veículos cadastrados</a>
+            <a href="/read" class="btn btn-success btn-lg btn-block">Exibir veículos cadastrados</a>
         </li>
         <li class="list-group-item">
-            <a href="/search" class="btn btn-info btn-lg btn-block">Buscar veículo</a>
+            <a href="/search" class="btn btn-primary btn-lg btn-block">Buscar veículo</a>
         </li>
 
     </ul>
