--- a/Projeto_veiculos_mongodb/templates/search_result.html
+++ b/Projeto_veiculos_mongodb/templates/search_result.html
@@ -6,43 +6,47 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container mt-5">
-        <h1>Resultado da Busca de Veículo</h1>
-        {% if error %}
-            <div class="alert alert-danger" role="alert">
-                {{ error }}
-            </div>
-        {% else %}
-            <table class="table">
-                <tbody>
-                    <tr>
-                        <th scope="row">Marca:</th>
-                        <td>{{ carro.marca }}</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Modelo:</th>
-                        <td>{{ carro.modelo }}</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Ano:</th>
-                        <td>{{ carro.ano }}</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Preço:</th>
-                        <td>{{ carro.preco }}</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Categoria:</th>
-                        <td>{{ carro.categoria }}</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Fabricante:</th>
-                        <td>{{ carro.fabricante }}</td>
-                    </tr>
-                </tbody>
-            </table>
-        {% endif %}
-        <a href="{{ url_for('search') }}" class="btn btn-primary">Nova Busca</a>
+<nav class="navbar bg-primary border-bottom border-body justify-content-center">
+    <a class="navbar-brand text-light" href="/">HOME</a>
+    <a class="navbar-brand text-light" href="/read">CADASTRADOS</a>
+</nav>
+<div class="container mt-5">
+    <h1>Resultado da Busca de Veículos</h1>
+    {% if error %}
+    <div class="alert alert-danger" role="alert">
+        {{ error }}
     </div>
+    {% else %}
+    <table class="table table-bordered">
+        <tbody>
+        <tr>
+            <th scope="row">Marca:</th>
+            <td>{{ carro.marca }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Modelo:</th>
+            <td>{{ carro.modelo }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Ano:</th>
+            <td>{{ carro.ano }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Preço:</th>
+            <td>{{ carro.preco }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Categoria:</th>
+            <td>{{ carro.categoria }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Fabricante:</th>
+            <td>{{ carro.fabricante }}</td>
+        </tr>
+        </tbody>
+    </table>
+    {% endif %}
+    <a href="{{ url_for('search') }}" class="btn btn-primary">Nova Busca</a>
+</div>
 </body>
 </html>
